v1.3.0: Comprehensive reload system and auto-update feature
- Added ReloadManager for foolproof configuration reloading
- Added reload subcommands (config, messages, tasks, hooks)
- Added auto-update checker with download capability
- Fixed config reload not applying immediately
- Improved task rescheduling on reload
- Added hook re-validation during reload
- Updated README with new features and changelog
- Fixed deprecated URL constructor warnings
- Fixed null safety warnings in BotManager